# github-upload

./: .gitignore  arc_od_pairs  arc_od_pairs.csv  complete_networks_preparation.py  fleet_sizing.py  instance.py  instance_validator.py  json_schema.py  json_schema_descriptions.py  odmts_main.py  odmts_schema.json  plotdesign.py  shuttle_legs.csv  stop_cluster.csv  taz_processor.py  taz_processor_example.py  triangulator.py  trip_splitting_example - Copy.py  trip_splitting_example.py  ~$Week 3 Plan.pptx
ARC/: ARC Weighted K-Means Clustering.ipynb  POI Clustering (Board)-Copy1.ipynb  arc_hub_location.txt  arc_potential_hub_location.html  combine_od_pairs.py
LeapHi-Benders-master/LeapHi-Benders-master/: .gitignore  CMakeLists.txt  main.cpp
LeapHi-Benders-master/LeapHi-Benders-master/CMakeModules/: FindGNUPLOT.cmake  FindGUROBI.cmake  FindLEMON.cmake
LeapHi-Benders-master/LeapHi-Benders-master/dataprocessing/: CMakeLists.txt  dataprocessing_cpp_include.hpp  dataprocessing_typedefs.hpp  distances.cpp  distances.hpp  raillines.cpp  raillines.hpp  stops.cpp  stops.hpp  trips.cpp  trips.hpp
LeapHi-Benders-master/LeapHi-Benders-master/kevintools/: CMakeLists.txt  gnuplot.h  kevintools_cplex.cpp  kevintools_cplex.hpp  kevintools_functions.cpp  kevintools_functions.hpp  kevintools_gurobi.cpp  kevintools_gurobi.hpp  kevintools_lemon.cpp  kevintools_lemon.hpp  kevintools_maps.cpp  kevintools_maps.hpp  kevintools_plotting.cpp  kevintools_plotting.hpp  kevintools_primitives.cpp  kevintools_primitives.hpp  kevintools_strings.cpp  kevintools_strings.hpp  kevintools_time.cpp  kevintools_time.hpp  kevintools_typedefs.hpp  kevintools_vectors.cpp  kevintools_vectors.hpp
LeapHi-Benders-master/LeapHi-Benders-master/networkdesign/: CMakeLists.txt  callbacks.cpp  callbacks.hpp  instance.cpp  instance.hpp  networkdesign_cpp_include.hpp  networkdesign_typedefs.hpp  networkdesignproblem.cpp  networkdesignproblem.hpp  runner.cpp  runner.hpp
LeapHi-Benders-master/LeapHi-Benders-master/networksolver/: CMakeLists.txt  gurobinetwork.cpp  gurobinetwork.hpp  lemonnetwork.cpp  lemonnetwork.hpp  network.cpp  network.hpp  networksolver_cpp_include.hpp  networksolver_typedefs.hpp  supergraph.cpp  supergraph.hpp
LeapHi-Benders-master/LeapHi-Benders-master/test/: CMakeLists.txt  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake
LeapHi-Benders-master/LeapHi-Benders-master/test/leaphi/: CMakeLists.txt  dataprocessing_test.cpp  networkdesign_test.cpp  networksolver_test.cpp
LeapHi-Benders-master/LeapHi-Benders-master/test/leaphi/dataprocessing_testdata/: euclidean_distance_matrix.csv  euclidean_distance_matrix_missing.csv  odx.csv  odx_no_destination.csv  odx_non_aggregated.csv  rail_lines.csv  rail_lines_inconsistent_travel.csv  rail_lines_test_cases.xlsx  stops.csv
georgia-tech-ppt-templates-2018/: Week 1 Plan.pptx  Week 2 Plan.pptx  Week 4 Plan.pptx  Weekly Report 7.24.pptx
input/: Model_Traffic_Analysis_Zones_2010.dbf  Model_Traffic_Analysis_Zones_2010.shx  POI Clustering (Combined).ipynb  alight_stop_id.csv  alight_stop_id_geo.csv  board_stop_id.xlsx  board_stop_id_geo.txt  board_stop_id_weight.txt  clustered_stops_1500feet.csv  fixed_hub_location.txt  hub_location_combined.csv  hub_location_original.csv  hub_location_original.html  potential_hub_location.html
optimization/: board_id_test.csv  board_id_test.txt  board_stop_id_geo.csv  data_sets.py  file  hub_location_board_test.csv  hub_location_board_test.txt  log.txt  optimization_skeleton_1.py  primal_dual_facility_location.py  run_code.py
output_10/: shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_design.html  shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_log.txt  shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_sample_convenience_map.html  shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_sample_cost_map.html  shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_sample_design.html  shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_sample_transfers_map.html  shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_sample_travel_time_map.html  shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_sample_waiting_time_map.html
output_11/: shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_design.html  shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_log.txt  shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_sample_convenience_map.html  shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_sample_cost_map.html  shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_sample_design.html  shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_sample_transfers_map.html  shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_sample_travel_time_map.html  shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_sample_waiting_time_map.html
output_12/: shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_design.html  shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_log.txt  shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_sample_convenience_map.html  shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_sample_cost_map.html  shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_sample_design.html  shuttlemile_1_0_transf_3_alpha_0_05_multipl_1_0_busfreqs_2_3_4_sample_transfers_map.html  (+2 more)
(+304 files in other folders)
